changes to resume

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="row no-gutters">
               <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
                 <div class="count-box"style="padding: 0px">
-                  <i class="bi bi-award"></i>
+                  <i class="bi bi-file-person"></i>
                   <span class="nowrap">Tamil</span>
                   <p class="nowrap"><strong>Canadian</strong></p>
                 </div>
@@ -372,7 +372,7 @@
         <div class="portfolio-description">
           <div class="section-title">
             <br><br><br>
-            <h2><a class="centered" href="/assets/img/portfolio/Resume - Stephanie Moses.pdf">Click here to download resume <i class="bi bi-cloud-download"></i></a></h2>
+            <h2><a class="centered" href="/assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download resume <i class="bi bi-cloud-download"></i></a></h2>
           </div>
         </div>
 
