--- a/portfolio-black-history-month.html
+++ b/portfolio-black-history-month.html
@@ -98,10 +98,10 @@
           <div class="col-lg-8">
             <div class="portfolio-details-slider swiper-container">
               <div class="swiper-wrapper align-items-center">
-                <!-- <video style="align-items: center;" width="700" height="400" controls>
+                <video style="align-items: center;" width="700" height="400" controls>
                   <source src="/assets/img/portfolio/Videos/Black History Month Video.mp4" type="video/mp4">
                   Your browser does not support the video tag.
-                </video> -->
+                </video>
                 
               </div>
               <div class="swiper-pagination"></div>
