--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             </div>
 
             <div class="count-box">
-              <img src="/assets/img/skills/wordwall.png"></img>
+              <img src="/assets/"></img>
               <span class="skill">Wordwall</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
