testing change to resume link

--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
         <div class="portfolio-description">
           <div class="section-title">
             <br><br><br>
+            <div style="text-align:center;"><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf"> Grade 1 & 2 - Interactive Read-aloud </a></div>
             <h2><a class="centered" href="/assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download resume <i class="bi bi-cloud-download"></i></a></h2>
           </div>
         </div>
