testing skills image issue

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
         <div class="row skills-content">
           <div class="col-lg-6" data-aos="fade-up">
             <div class="count-box">
+              <img src="assets/img/portfolio/Videos/Black History Month.png" class="img-fluid" alt="">
               <img src="/assets/img/skills/google-classroom.png"></img>
               <span class="skill">Google Classroom</span>
               <div class="progress-bar-wrap">
