--- a/index.html
+++ b/index.html
@@ -226,7 +226,9 @@
           <div class="col-lg-6" data-aos="fade-up">
             <div class="count-box">
               <img src="assets/img/portfolio/Videos/Black History Month.png" class="img-fluid" alt="">
+              
               <img src="/assets/img/skills/google-classroom.png"></img>
+              <img src="/assets/img/skills/google-classroom.png" class="img-fluid" alt="">
               <span class="skill">Google Classroom</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
