--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             </div>
 
             <div class="count-box">
-              <img src="/assets/img/skills/canva.png"></img>
+              <img src="assets/img/skills/canva.png"></img>
               <span class="skill">Canva</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -301,7 +301,7 @@
 
           <div class="col-lg-6" data-aos="fade-up">
             <div class="count-box">
-              <img src="/assets/img/skills/iMovie.png"></img>
+              <img src="assets/img/skills/iMovie.png"></img>
               <span class="skill">iMovie</span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
