scrolling order changed

--- a/index.html
+++ b/index.html
@@ -313,72 +313,6 @@
       </div>
     </section><!-- End Facts Section -->
 
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Resume Summary</h2>
-          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Certification</h3>
-            <div class="resume-item">
-              <h4>New York State Initial Teaching Certification</h4>
-              <p><em>Early Child and Childhood Education (Birth- Grade 6),</em></p>
-              <h5>May 2021</h5>
-            </div>
-
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Science in Education</h4>
-              <h5>May 2021</h5>
-              <p><em>Niagara University, NY</em></p>
-              <p><em>Elementary Education (Birth- Grade 6)</em></p>
-              <p><em>GPA: 4.0</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Bachelor of Arts in Marketing</h4>
-              <h5>July 2015</h5>
-              <p><em>Chartered Institute of Marketing – Berkshire, UK</em></p>
-            </div>
-          </div>
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Teaching experience</h3>
-            <div class="resume-item">
-              <h4>Student Teacher Experience</h4>
-              <h5>Spring 2021 (Jan 2021- May 2021)</h5>
-              <p><em>Buttonville Public School- Markham, Ontario</em></p>
-              <p><em>York Region District School Board</em></p>
-              <p><em>Grade 2/3 (Both in-person & virtual)</em></p>
-            </div>
-            <div class="resume-item">
-              <h4>Teacher Assistant Experience</h4>
-              <h5>Fall 2020 (Sept - Dec 2020) </h5>
-              <p><em>The Divine Infant Catholic School - Scarborough, Ontario</em></p>
-              <p><em>Toronto Catholoc District School Board</em></p>
-              <p><em>Grade 1/ 2</em></p>
-            </div>
-            <h3 class="resume-title">Honors/Certifications</h3>
-            <div class="resume-item">
-              <h4>Member, Kappa Delta Pi (KDP)</h4>
-              <p><em>International Education Honorary Society</em></p>
-            </div>
-          </div>
-        </div>
-  
-        <div class="portfolio-description">
-          <div class="section-title">
-            <br>
-            <div style="text-align:center;"><h2><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download resume <i class="bi bi-cloud-download"></i></a></h2></div>
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Resume Section -->
-
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
       <div class="container">
@@ -536,6 +470,72 @@
 
       </div>
     </section><!-- End Services Section -->
+
+    <!-- ======= Resume Section ======= -->
+    <section id="resume" class="resume section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Resume Summary</h2>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
+            <h3 class="resume-title">Certification</h3>
+            <div class="resume-item">
+              <h4>New York State Initial Teaching Certification</h4>
+              <p><em>Early Child and Childhood Education (Birth- Grade 6),</em></p>
+              <h5>May 2021</h5>
+            </div>
+
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Master of Science in Education</h4>
+              <h5>May 2021</h5>
+              <p><em>Niagara University, NY</em></p>
+              <p><em>Elementary Education (Birth- Grade 6)</em></p>
+              <p><em>GPA: 4.0</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelor of Arts in Marketing</h4>
+              <h5>July 2015</h5>
+              <p><em>Chartered Institute of Marketing – Berkshire, UK</em></p>
+            </div>
+          </div>
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Teaching experience</h3>
+            <div class="resume-item">
+              <h4>Student Teacher Experience</h4>
+              <h5>Spring 2021 (Jan 2021- May 2021)</h5>
+              <p><em>Buttonville Public School- Markham, Ontario</em></p>
+              <p><em>York Region District School Board</em></p>
+              <p><em>Grade 2/3 (Both in-person & virtual)</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Teacher Assistant Experience</h4>
+              <h5>Fall 2020 (Sept - Dec 2020) </h5>
+              <p><em>The Divine Infant Catholic School - Scarborough, Ontario</em></p>
+              <p><em>Toronto Catholoc District School Board</em></p>
+              <p><em>Grade 1/ 2</em></p>
+            </div>
+            <h3 class="resume-title">Honors/Certifications</h3>
+            <div class="resume-item">
+              <h4>Member, Kappa Delta Pi (KDP)</h4>
+              <p><em>International Education Honorary Society</em></p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="portfolio-description">
+          <div class="section-title">
+            <br>
+            <div style="text-align:center;"><h2><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download resume <i class="bi bi-cloud-download"></i></a></h2></div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Resume Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
