changed work experience to teaching experience and added content

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li><a href="#teaching-philosophy" class="nav-link scrollto"><i class="bi bi-pencil-square"></i> <span>Teaching Philosophy</span></a></li>
           <li><a href="#skills" class="nav-link scrollto"><i class="bi bi-laptop"></i> <span>Computer Skills</span></a></li>
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Examples of my work</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Work experience</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
 
@@ -446,25 +446,53 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Related Work Experience</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Teaching Experience</h2>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
+          <div class="col-lg-6 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Secretary:<br>Divine Infant Catholic School</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <h4 class="title"><a href="">Student Teacher: Grade 2 & 3</a></h4>
+            <h4 class="title"><a href="">Buttonville Public School - Markham, Ontario</a></h4>
+            <p class="description">
+              • Utilized Google slides to create interactive Language lessons on poetry in a virtual setting <br>
+              • Developed and taught a geometry unit on 2D and 3D shapes and used Kahoot as a summative
+              assessment tool<br>
+              • Developed and taught a numeracy unit on addition and subtraction with regrouping and
+              introduced various problem-solving strategies like CUBES<br>
+              • Administered, scored and interpreted Observation Surveys with the assistance of classroom
+              teacher to better understand students’ literacy needs.<br>
+              • Developed and taught an interactive vocabulary lesson on The Lion, the Witch and the Wardrobe
+              using Nearpod<br>
+              • Designed a Health assignment focusing on food groups where students recorded themselves
+              making a healthy meal at home<br>
+              • Developed and taught an interactive Music unit on Salsa music which included researching
+              famous Salsa musicians and making musical instruments<br>
+              • Administered running records frequently with the assistance of classroom teacher to monitor
+              students’ progress<br>
+              • Created an iMovie with students’ poems and drawings of Black history heroes for the school
+              assembly<br>
+              • Facilitated guided reading groups for students reading below grade level<br>
+              • Modified lessons, tasks, and assessments to meet the diverse needs and learning styles of
+              students<br>
+            </p>
           </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Secretary:<br> TCDSB</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-          </div>
-          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon"><i class="bi bi-briefcase"></i></div>
-            <h4 class="title"><a href="">Public Relations Manager:<br>  HardTalk Colombo, Sri Lanka</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <h4 class="title"><a href="">Student Teacher: Grade 1 & 2</a></h4>
+            <h4 class="title"><a href="">Divine Infant Catholic School - Scarborough, Ontario</a></h4>
+            <p class="description">
+              • Developed and taught an interactive Language lesson on ‘bucket fillers’ which included
+              cooperative learning activities with physical distancing measures <br>
+              • Facilitated hands-on Math lessons with the use of manipulatives to assist students with skip
+              counting <br>
+              • Assisted classroom teacher with grading <br>
+              • Collaborated with classroom teacher and Educational Assistant to provide one-on one
+              assistance to students with special needs in all subject areas <br>
+              • Monitored students outside on the school yard during recess breaks and ensured
+              COVID-19 protocols and rules were followed at all times<br>
+            </p>
           </div>
         </div>
 
