--- a/portfolio-black-history-month.html
+++ b/portfolio-black-history-month.html
@@ -63,7 +63,7 @@
           <li><a href="index.html#teaching-philosophy" class="nav-link scrollto"><i class="bi bi-pencil-square"></i> <span>Teaching Philosophy</span></a></li>
           <li><a href="index.html#skills" class="nav-link scrollto"><i class="bi bi-laptop"></i> <span>Computer Skills</span></a></li>
           <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Examples of my work</span></a></li>
-          <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Work experience</span></a></li>
+          <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
         </ul>
