--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Examples of my work</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#Interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
 
         </ul>
@@ -194,7 +195,7 @@
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Facts Section ======= -->
+    <!-- ======= Teaching Philosophy Section ======= -->
     <section id="teaching-philosophy" class="facts">
       <div class="container">
 
@@ -441,7 +442,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Teaching Experience ======= -->
     <section id="services" class="services">
       <div class="container">
 
@@ -561,7 +562,6 @@
             <div style="text-align:center;"><h2><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download resume <i class="bi bi-cloud-download"></i></a></h2></div>
           </div>
         </div>
-
       </div>
     </section><!-- End Resume Section -->
 
@@ -571,7 +571,7 @@
 
         <div class="section-title">
           <h2>References</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
@@ -643,8 +643,43 @@
       </div>
     </section><!-- End Testimonials Section -->
 
+    <!-- ======= Skills & Interests Section ======= -->
+    <section id="Interest" class="portfolio">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Skills & Interests</h2>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
+        </div>
+
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-6 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/Baking/baking.jpg" class="img-fluid" alt="">
+              <span class="centered"style="color:black">Baking</span>
+              <div class="portfolio-links">
+                <a href="assets/img/Baking/baking.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Black History Month"><i class="bx bi-arrows-fullscreen"></i></a>
+                <a href="portfolio-baking.html" title="More Details">More <i style="font-size: 25px"class="bx bi-chevron-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/photography.jpg" class="img-fluid" alt="" height="400 px">
+              <span class="centered"style="color:white">Photography</span>
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/photography.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pink Shirt Day"><i class="bx bi-arrows-fullscreen"></i></a>
+                <a href="portfolio-pink-shirt-day.html" title="More Details">More <i style="font-size: 25px"class="bx bi-chevron-double-right"></i></a>
+              </div>
+            </div>
+          </div>
+
+      </div>
+    </section><!-- End Portfolio Section -->
+
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+    <section id="contact" class="contact section-bg">
       <div class="container">
 
         <div class="section-title">
