added baking and photography pages

--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
               <span class="centered"style="color:white">Photography</span>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/photography.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pink Shirt Day"><i class="bx bi-arrows-fullscreen"></i></a>
-                <a href="portfolio-pink-shirt-day.html" title="More Details">More <i style="font-size: 25px"class="bx bi-chevron-double-right"></i></a>
+                <a href="portfolio-photography.html" title="More Details">More <i style="font-size: 25px"class="bx bi-chevron-double-right"></i></a>
               </div>
             </div>
           </div>
