--- a/portfolio-how-to-fill-my-bucket.html
+++ b/portfolio-how-to-fill-my-bucket.html
@@ -65,6 +65,7 @@
         <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Examples of my work</span></a></li>
         <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
         <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <li><a href="index.html#Interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
         <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
       </ul>
     </nav>
