reference section added

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Examples of my work</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="#testimonials" class="nav-link scrollto"><i class="bi bi-bootstrap-reboot"></i> <span>References & Evaluations</span></a></li>
           <li><a href="#Interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
-
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -78,7 +78,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Stephanie Moses</h1>
-      <p>I'm <span class="typed" data-typed-items="a Teacher,a Wife, an immigrant,a South Asian,a fitness enthusiast, an amateur baker,a photography enthusiast"></span></p>
+      <p>I'm <span class="typed" data-typed-items="a Teacher,a Wife, an immigrant,a Sri lankan - Canadian,a fitness enthusiast, an amateur baker,a photography enthusiast"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -90,20 +90,6 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <!-- <p>I was born and brought up in Sri Lanka- a beautiful island in South Asia. After working in communications in multiple industries back home, which included Apparel, 
-            Travel & Tourism and Public Relations, I was ready for a new challenge when my husband and I migrated to Canada in 2018. 
-            I started my career in Toronto as a school secretary in a Catholic Elementary School with very low expectations as I couldn’t imagine fitting into a non-corporate environment. 
-            I was happy to be proved wrong after just a couple of weeks at the school; I realized I was a natural fit in such a diverse environment and enjoyed every moment of work. 
-          </p>
-          <br>
-          <p>
-            Over time, I realized that there was certainly more I could offer to the largely diverse schools in Ontario as an immigrant, 
-            a person of colour and an ambassador of positivity. I made a bold decision to switch careers and go back to school. 
-            I must admit that choosing to become a teacher after spending ten years in the corporate sector has been one of the best decisions I have made as an adult; 
-            I take pride in finally choosing a profession where I can make every single day of work an opportunity to give back to the community. 
-            I am excited to be on this new journey and impact the lives of students of different cultures, abilities, and backgrounds, 
-            to ensure they receive equal opportunities in learning despite their differences.
-          </p> -->
         </div>
 
         <div class="row">
@@ -559,7 +545,7 @@
         <div class="portfolio-description">
           <div class="section-title">
             <br>
-            <div style="text-align:center;"><h2><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download resume <i class="bi bi-cloud-download"></i></a></h2></div>
+            <div style="text-align:center;"><h1><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download resume <i class="bi bi-cloud-download"></i></a></h1></div>
           </div>
         </div>
       </div>
@@ -570,9 +556,29 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>References</h2>
+          <h2>References & Evaluations</h2>
           <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
+
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up">
+            <h3 style="text-decoration: underline; color: #173b6c;" class="resume-title">Teacher Evaluations</h3>
+            <div class="resume-item">
+              <br>
+              <p><em><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download midway evaluation <i class="bi bi-cloud-download"></i></a></em></p>
+            </div>
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up">
+            <h3 style="text-decoration: underline; color: #173b6c;" class="resume-title">Reference Letters</h3>
+            <div class="resume-item">
+              <br>
+              <p><em><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download letter <i class="bi bi-cloud-download"></i></a></em></p>
+            </div>
+          </div>
+        </div>
+
+        <br><br><br><br><br><br>
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper">
@@ -639,7 +645,6 @@
           </div>
           <div class="swiper-pagination"></div>
         </div>
-
       </div>
     </section><!-- End Testimonials Section -->
 
