--- a/portfolio-pink-shirt-day.html
+++ b/portfolio-pink-shirt-day.html
@@ -41,37 +41,37 @@
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
   <!-- ======= Header ======= -->
-<header id="header">
-  <div class="d-flex flex-column">
+  <header id="header">
+    <div class="d-flex flex-column">
 
-    <div class="profile">
-      <img src="assets/img/me1.png" alt="" class="img-fluid rounded-circle">
-      <h1 class="text-light"><a href="index.html">Stephanie Moses</a></h1>
-      <div class="social-links mt-3 text-center">
-        <a href="https://twitter.com/stephanie142529" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <!-- <a href="https://www.facebook.com/stephanie.moses.330" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-        <a href="https://www.instagram.com/stephh1491/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
-        <a href="https://www.linkedin.com/in/stephanie-moses-020010173/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <div class="profile">
+        <img src="assets/img/me1.png" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">Stephanie Moses</a></h1>
+        <div class="social-links mt-3 text-center">
+          <a href="https://twitter.com/stephanie142529" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <!-- <a href="https://www.facebook.com/stephanie.moses.330" class="facebook"><i class="bx bxl-facebook"></i></a> -->
+          <a href="https://www.instagram.com/stephh1491/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <!--<a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>-->
+          <a href="https://www.linkedin.com/in/stephanie-moses-020010173/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        </div>
       </div>
-    </div>
 
-    <nav id="navbar" class="nav-menu navbar">
-      <ul>
-        <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="index.html#teaching-philosophy" class="nav-link scrollto"><i class="bi bi-pencil-square"></i> <span>Teaching Philosophy</span></a></li>
-        <li><a href="index.html#skills" class="nav-link scrollto"><i class="bi bi-laptop"></i> <span>Computer Skills</span></a></li>
-        <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Examples of my work</span></a></li>
-        <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
-        <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="index.html#Interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
-        <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
-      </ul>
-    </nav>
-    <!-- .nav-menu -->
-  </div>
-</header><!-- End Header -->
+      <nav id="navbar" class="nav-menu navbar">
+        <ul>
+          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="index.html#teaching-philosophy" class="nav-link scrollto"><i class="bi bi-pencil-square"></i> <span>Teaching Philosophy</span></a></li>
+          <li><a href="index.html#skills" class="nav-link scrollto"><i class="bi bi-laptop"></i> <span>Computer Skills</span></a></li>
+          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Examples of my work</span></a></li>
+          <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
+          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="index.html#testimonials" class="nav-link scrollto"><i class="bi bi-bootstrap-reboot"></i> <span>References & Evaluations</span></a></li>
+          <li><a href="index.html#Interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
+          <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
+        </ul>
+      </nav><!-- .nav-menu -->
+    </div>
+  </header><!-- End Header -->
 
   <main id="main">
 
