--- a/index.html
+++ b/index.html
@@ -93,10 +93,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4" data-aos="fade-right">
-            <img style =width:auto;height:350px src="assets/img/me.png" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left">
             <p>I was born and brought up in Sri Lanka- a beautiful island in South Asia. After working in communications in multiple industries back home, which included Apparel, 
               Travel & Tourism and Public Relations, I was ready for a new challenge when my husband and I migrated to Canada in 2018. 
               I started my career in Toronto as a school secretary in a Catholic Elementary School with very low expectations as I couldn’t imagine fitting into a non-corporate environment. 
@@ -111,28 +108,13 @@
               I am excited to be on this new journey and impact the lives of students of different cultures, abilities, and backgrounds, 
               to ensure they receive equal opportunities in learning despite their differences.
             </p>
-            <!-- <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>14 September 1991</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+647 833 1425</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Toronto, ON, Canada</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>29</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Masters in Edu</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>stephaniemoses91@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Work Status:</strong> <span>Available</span></li>
-                </ul>
-              </div>
-            </div> -->
-            <!-- <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p> -->
+          </div>
+          <div class="col-lg-6" data-aos="fade-right">
+            <!-- <img style =width:auto;height:350px src="assets/img/me.png" class="img-fluid" alt=""> -->
+            <video style="align-items: center;" width="100%" controls>
+              <source src="/assets/img/portfolio/Videos/Intro video.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
           </div>
         </div>
         <section id="facts" class="facts">
