added downloadable documents

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             <h3 style="text-decoration: underline; color: #173b6c;" class="resume-title">Teacher Evaluations</h3>
             <div class="resume-item">
               <br>
-              <p><em><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download midway evaluation <i class="bi bi-cloud-download"></i></a></em></p>
+              <p><em><a href="assets/img/portfolio/Lesson-Plan-1/Midway Evaluation Report.pdf">Click here to download midway evaluation <i class="bi bi-cloud-download"></i></a></em></p>
             </div>
           </div>
 
@@ -546,7 +546,7 @@
             <h3 style="text-decoration: underline; color: #173b6c;" class="resume-title">Reference Letters</h3>
             <div class="resume-item">
               <br>
-              <p><em><a href="assets/img/portfolio/Lesson-Plan-1/Resume - Stephanie Moses.pdf">Click here to download letter <i class="bi bi-cloud-download"></i></a></em></p>
+              <p><em><a href="assets/img/portfolio/Lesson-Plan-1/Reference Letter by Cooperating Teacher .pdf">Click here to download letter <i class="bi bi-cloud-download"></i></a></em></p>
             </div>
           </div>
         </div>
