--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
             </p>
           </div>
           <div class="col-lg-6" data-aos="fade-right">
-            <video style="align-items: center;" width="100%" controls>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/JBYNkJbeKYc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <!-- <video style="align-items: center;" width="100%" controls>
               <source src="/assets/img/portfolio/Videos/Intro video.mp4" type="video/mp4">
               Your browser does not support the video tag.
-            </video>
+            </video> -->
           </div>
         </div>
         <section id="facts" class="facts">
