image file size reduced.

--- a/portfolio-black-history-classroom.html
+++ b/portfolio-black-history-classroom.html
@@ -80,11 +80,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          
+          <h2>Examples of my work</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#portfolio">Examples of my work</a></li>
-            <li>Black History Month</li>
+            <li>Black History</li>
           </ol>
         </div>
 
@@ -103,7 +103,7 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/Black-History/BH-1.jpeg" alt="">
+                  <img src="assets/img/portfolio/Black-History/BH-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
