--- a/portfolio-photography.html
+++ b/portfolio-photography.html
@@ -80,8 +80,8 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          
-          <ol style="text-align:right;">
+          <h2>Skills & Interests</h2>
+          <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#Interest">Skills & Interests</a></li>
             <li>Photography</li>
