--- a/portfolio-the-lion-the-witch-the-wardrobe.html
+++ b/portfolio-the-lion-the-witch-the-wardrobe.html
@@ -80,7 +80,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          
+          <h2>Examples of my work</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#portfolio">Examples of my work</a></li>
@@ -103,19 +103,19 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/The-Lion-The-Witch-The-Wardrobe/TLWW-1.jpeg" alt="">
+                  <img src="assets/img/portfolio/The-Lion-The-Witch-The-Wardrobe/TLWW-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/The-Lion-The-Witch-The-Wardrobe/TLWW-2.jpeg" alt="">
+                  <img src="assets/img/portfolio/The-Lion-The-Witch-The-Wardrobe/TLWW-2.png" alt="">
                 </div> 
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/The-Lion-The-Witch-The-Wardrobe/TLWW-3.jpeg" alt="">
+                  <img src="assets/img/portfolio/The-Lion-The-Witch-The-Wardrobe/TLWW-3.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/The-Lion-The-Witch-The-Wardrobe/TLWW-4.jpeg" alt="">
+                  <img src="assets/img/portfolio/The-Lion-The-Witch-The-Wardrobe/TLWW-4.png" alt="">
                 </div> 
 
                 <div class="swiper-slide">
