--- a/portfolio-black-history-month.html
+++ b/portfolio-black-history-month.html
@@ -83,7 +83,8 @@
           <h2>Examples of my work</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Black History</li>
+            <li><a href="index.html#portfolio">Examples of my work</a></li>
+            <li>Black History Month</li>
           </ol>
         </div>
 
