--- a/portfolio-how-to-fill-my-bucket.html
+++ b/portfolio-how-to-fill-my-bucket.html
@@ -80,7 +80,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          
+          <h2>Examples of my work</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#portfolio">Examples of my work</a></li>
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/buckets/Bucket-4.jpeg" alt="">
+                  <img src="assets/img/portfolio/buckets/Bucket-4.png" alt="">
                 </div> 
 
                 <div class="swiper-slide">
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/buckets/Bucket-2.jpeg" alt="">
+                  <img src="assets/img/portfolio/buckets/Bucket-2.png" alt="">
                 </div> 
 
                 <div class="swiper-slide">
