--- a/portfolio-pink-shirt-day.html
+++ b/portfolio-pink-shirt-day.html
@@ -80,11 +80,11 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          
-          <ol style="text-align:right;">
+          <h2>Examples of my work</h2>
+          <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#portfolio">Examples of my work</a></li>
-            <li>Pink-Shirt-Day</li>
+            <li>Pink Shirt Day</li>
           </ol>
         </div>
 
