--- a/portfolio-teaching-symmetry-through-art.html
+++ b/portfolio-teaching-symmetry-through-art.html
@@ -80,7 +80,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          
+          <h2>Examples of my work</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li><a href="index.html#portfolio">Examples of my work</a></li>
