image hover zoom added

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="#testimonials" class="nav-link scrollto"><i class="bi bi-bootstrap-reboot"></i> <span>References & Evaluations</span></a></li>
-          <li><a href="#Interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
+          <li><a href="#interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
           <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -594,7 +594,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Skills & Interests Section ======= -->
-    <section id="Interest" class="portfolio">
+    <section id="interest" class="portfolio">
       <div class="container">
 
         <div class="section-title">
@@ -607,7 +607,7 @@
               <img src="assets/img/Baking/baking.jpg" class="img-fluid" alt="">
               <span class="centered"style="color:black">Baking</span>
               <div class="portfolio-links">
-                <a href="assets/img/Baking/baking.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Black History Month"><i class="bx bi-arrows-fullscreen"></i></a>
+                <a href="assets/img/Baking/baking.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Baking"><i class="bx bi-arrows-fullscreen"></i></a>
                 <a href="portfolio-baking.html" title="More Details">More <i style="font-size: 25px"class="bx bi-chevron-double-right"></i></a>
               </div>
             </div>
@@ -618,7 +618,7 @@
               <img src="assets/img/portfolio/photography.jpg" class="img-fluid" alt="" height="400 px">
               <span class="centered"style="color:white">Photography</span>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/photography.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pink Shirt Day"><i class="bx bi-arrows-fullscreen"></i></a>
+                <a href="assets/img/portfolio/photography.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Photography"><i class="bx bi-arrows-fullscreen"></i></a>
                 <a href="portfolio-photography.html" title="More Details">More <i style="font-size: 25px"class="bx bi-chevron-double-right"></i></a>
               </div>
             </div>
