--- a/inner-page.html
+++ b/inner-page.html
@@ -66,7 +66,7 @@
           <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="index.html#testimonials" class="nav-link scrollto"><i class="bi bi-bootstrap-reboot"></i> <span>References & Evaluations</span></a></li>
-          <li><a href="index.html#Interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
+          <li><a href="index.html#interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
           <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
