--- a/portfolio-baking.html
+++ b/portfolio-baking.html
@@ -58,7 +58,7 @@
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html#hero" class="nav-link scrollto"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="index.html#teaching-philosophy" class="nav-link scrollto"><i class="bi bi-pencil-square"></i> <span>Teaching Philosophy</span></a></li>
           <li><a href="index.html#skills" class="nav-link scrollto"><i class="bi bi-laptop"></i> <span>Computer Skills</span></a></li>
@@ -66,7 +66,7 @@
           <li><a href="index.html#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Teaching experience</span></a></li>
           <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="index.html#testimonials" class="nav-link scrollto"><i class="bi bi-bootstrap-reboot"></i> <span>References & Evaluations</span></a></li>
-          <li><a href="index.html#Interest" class="nav-link scrollto"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
+          <li><a href="index.html#interest" class="nav-link scrollto active"><i class="bi bi-bicycle"></i> <span>Skills & Interests</span></a></li>
           <li><a href="index.html#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact Me</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -83,7 +83,7 @@
           <h2>Skills & Interests</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#Interest">Skills & Interests</a></li>
+            <li><a href="index.html#interest">Skills & Interests</a></li>
             <li>Baking</li>
           </ol>
         </div>
@@ -103,13 +103,13 @@
             <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
               <img
                 src="assets/img/Baking/baking-1.JPG"
-                class="w-100 shadow-1-strong rounded mb-4"
+                class="w-100 shadow-1-strong rounded mb-4 zoom" 
                 alt=""
               />
 
               <img
               src="assets/img/Baking/baking-2.JPG"
-              class="w-100 shadow-1-strong rounded mb-4"
+              class="w-100 shadow-1-strong rounded mb-4 zoom"
               alt=""
               />
           
@@ -118,17 +118,17 @@
             <div class="col-lg-4 mb-4 mb-lg-0">
               <img
                 src="assets/img/Baking/baking-3.JPG"
-                class="w-100 shadow-1-strong rounded mb-4"
+                class="w-100 shadow-1-strong rounded mb-4 zoom"
                 alt=""
               />
               <img
               src="assets/img/Baking/baking-5.jpeg"
-              class="w-100 shadow-1-strong rounded mb-4"
+              class="w-100 shadow-1-strong rounded mb-4 zoom"
               alt=""
               />
               <img
               src="assets/img/Baking/baking-4.JPG"
-              class="w-100 shadow-1-strong rounded mb-4"
+              class="w-100 shadow-1-strong rounded mb-4 zoom"
               alt=""
               />
             </div>
@@ -136,12 +136,12 @@
             <div class="col-lg-4 mb-4 mb-lg-0">
               <img
               src="assets/img/Baking/baking-6.jpeg"
-              class="w-100 shadow-1-strong rounded mb-4"
+              class="w-100 shadow-1-strong rounded mb-4 zoom"
               alt=""
               />
               <img
                 src="assets/img/Baking/baking-7.jpg"
-                class="w-100 shadow-1-strong rounded mb-4"
+                class="w-100 shadow-1-strong rounded mb-4 zoom"
                 alt=""
               />         
             </div>
