added final evaluation report

--- a/index.html
+++ b/index.html
@@ -531,6 +531,8 @@
             <div class="resume-item">
               <br>
               <p><em><a href="assets/img/portfolio/Lesson-Plan-1/Midway Evaluation Report.pdf">Click here to download midway evaluation <i class="bi bi-cloud-download"></i></a></em></p>
+              <br>
+              <p><em><a href="assets/img/portfolio/Lesson-Plan-1/Final Evaluation Report.pdf">Click here to download Final evaluation <i class="bi bi-cloud-download"></i></a></em></p>
             </div>
           </div>
 
